@startuml

title __PERSON's Class Diagram__\n

  package business {
    package business.person {
      class Person {
          - usingForwardingAddress : boolean
          + Person()
          + Person()
          + getForwardingAddress()
          + setForwardingAddress()
          + getId()
          + getSex()
          + getAge()
          + getName()
          + getHomeAddress()
          + isUsingForwardingAddress()
      }
    }
  }
  

  package business {
    package business.person {
      class PersonBuilder {
          {static} - ourInstance : PersonBuilder
          {static} + getInstance()
          - PersonBuilder()
          + clear()
          + build()
          + buildAndClear()
          + setId()
          + setSex()
          + setAge()
          + setName()
          + setHomeAddress()
          + setForwardingAddress()
      }
    }
  }
  

  Person o-- ID : id
  Person o-- Sex : sex
  Person o-- Age : age
  Person o-- Name : name
  Person o-- Address : homeAddress
  Person o-- Address : forwardingAddress
  PersonBuilder -up-|> Builder
  PersonBuilder o-- ID : id
  PersonBuilder o-- Sex : sex
  PersonBuilder o-- Age : age
  PersonBuilder o-- Name : name
  PersonBuilder o-- Address : homeAddress
  PersonBuilder o-- Address : forwardingAddress


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
